# rustfs-operator

./: Cargo.toml  Dockerfile  README.md
.github/actions/cached-images/: action.yml
.github/workflows/: ci.yml  release.yml
charts/rustfs-operator/: Chart.yaml  README.md  values.yaml
charts/rustfs-operator-crds/: Chart.yaml  README.md  values.yaml
charts/rustfs-operator-crds/templates/: accesskeys.yaml  buckets.yaml  clusterconnections.yaml  policies.yaml  users.yaml
charts/rustfs-operator/crds/: crds.yaml
charts/rustfs-operator/templates/: rbac.yaml
charts/rustfs-resources/: Chart.yaml  README.md  values.yaml
charts/rustfs-resources/templates/: _helpers.tpl  accesskey.yaml  bucket.yaml  policy.yaml  user.yaml
deploy/: crds.yaml  example.yaml  rbac.yaml
scripts/: chart-e2e.sh  chart-tests.sh  generate-crds.py
scripts/testdata/: resources-values.yaml
src/: connection.rs  crd.rs  main.rs  provider.rs
src/reconcile/: access_key.rs  bucket.rs  mod.rs  user.rs
tests/: e2e_k3s.rs  integration_rustfs.rs
tests/common/: mod.rs
